--- a/assests/style.css
+++ b/assests/style.css
@@ -41,6 +41,8 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 1000;
+  opacity: 0.9;
 }
 
 /* Styling List */
@@ -137,41 +139,75 @@ nav ul li:hover {
 }
 /* Styling certs section */
 .certs {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  padding-top: 200px;
-}
-.certs .divider {
-  display: none;
-}
-.cert-1,
-.cert-2 {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f4f4f4;
+  overflow-y: hidden;
+}
+.slider-container {
+  position: relative;
+  width: 395px; /* width of a certificate */
+  height: 320px;
+  overflow: hidden;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); /* optional shadow for aesthetic */
+  padding-bottom: 30px; /* space for the indicators */
+}
+
+.certificates-slider {
+  display: flex;
+  transition: transform 0.4s;
+}
+
+#img {
+  flex: 0 0 auto;
+  width: 370px;
+  height: 280px;
+  margin: 10px 13px;
+  /* border: 2px solid black; */
+}
+
+.arrow-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0.7);
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  z-index: 10;
+}
+
+#prevBtn {
+  left: 0;
+}
+
+#nextBtn {
+  right: 0;
+}
+/* Lines under certs */
+.indicators {
+  position: absolute;
+  top: 302px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-.cert-2 {
-  padding-top: 100px;
-  flex-direction: column-reverse;
+.dot {
+  width: 50px; /* Length of the line */
+  height: 4px; /* Thickness of the line */
+  margin: 0 5px;
+  background-color: lightgray; /* Neutral color for inactive dots */
+  cursor: pointer;
+  transition: background-color 0.3s; /* Smooth transition for color changes */
 }
 
-.cert-1 h2,
-.cert-2 h2 {
-  padding-bottom: 60px;
-}
-
-.cert-1 img,
-.cert-2 img {
-  height: 150px;
-  width: 200px;
-}
-/* Styling hover over effect on certificates */
-.cert-1 img:hover,
-.cert-2 img:hover {
-  opacity: 0.5;
+.dot.active {
+  background-color: rgb(175, 175, 175);
 }
 
 /* Resume section */
@@ -286,45 +322,21 @@ nav ul li:hover {
   .card-4 h2 {
     padding-right: 50px;
   }
-  .certs {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    justify-content: space-around;
-    padding-top: 0;
-    padding-bottom: 50px;
+  /* Certs updated */
+  .slider-container {
+    width: 620px; /* width of a certificate */
+    height: 540px;
   }
-  /* Styling certs section for bigger screen */
-  .cert-1,
-  .cert-2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  #img {
+    flex: 0 0 auto;
+    width: 590px;
+    height: 480px;
+    margin: 10px 13px;
   }
-  .cert-1 .img {
-    border-right: 1px solid var(--bordercolor);
-    padding-right: 50px;
+  .indicators {
+    top: 510px;
+    left: 50%;
   }
-  .cert-2 .img {
-    border-left: 1px solid var(--bordercolor);
-    padding-left: 50px;
-  }
-  .cert-1 img,
-  .cert-2 img {
-    height: 250px;
-    width: 350px;
-  }
-
-  .cert-1 h2 {
-    padding-top: 30px;
-    padding-left: 50px;
-  }
-  .cert-2 h2 {
-    padding-top: 30px;
-    padding-right: 50px;
-  }
-
   /* Resume section */
   .resume {
     width: 100vw;
@@ -437,42 +449,20 @@ nav ul li:hover {
   .card-4 h2 {
     padding-right: 50px;
   }
-  .certs {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    justify-content: space-around;
-    padding-top: 30px;
+  /* Certs updated */
+  .slider-container {
+    width: 995px; /* width of a certificate */
+    height: 750px;
   }
-
-  .cert-1,
-  .cert-2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  #img {
+    flex: 0 0 auto;
+    width: 970px;
+    height: 680px;
+    margin: 10px 13px;
   }
-  .cert-1 .img {
-    border-right: 1px solid var(--bordercolor);
-    padding-right: 50px;
-  }
-  .cert-2 .img {
-    border-left: 1px solid var(--bordercolor);
-    padding-left: 50px;
-  }
-
-  .cert-1 h2 {
-    padding-top: 30px;
-    padding-left: 50px;
-  }
-  .cert-2 h2 {
-    padding-top: 30px;
-    padding-right: 50px;
-  }
-  .cert-1 img,
-  .cert-2 img {
-    height: 320px;
-    width: 450px;
+  .indicators {
+    top: 720px;
+    left: 50%;
   }
   /* Resume section */
   .resume {
